# scars_watch_campaign_site

./: .env_example  CODESPACES.md  Dockerfile  FLASK_ONLY.md  LICENSE  README.md  STREAMLIT_INTEGRATION.md  app.py  app_leaflet.py  prompts.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_all.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  ruff.yml
claude_log/: CODESPACES.md  DEBUGGING_GUIDE.md  FLUFF_GENERATOR_FLASK.md  FLUFF_GENERATOR_MODULE.md  FRONTEND_REWRITE_SUMMARY.md  MAP_CUSTOMIZATION.md  MAP_LOCATIONS.md  SIDEBAR_AND_CHARACTERS.md
data/: data model.md  ongoing_story.txt
data/data_templates/: information_template.json
src/: fluff_generator.py  model_funcs.py  prompts.py  retrieval.py  schemas.py  streamlit_utils.py
static/css/: style.css
templates/: characters.html  hello.html  index.html  location_detail.html  red_scar_overview.html  scars_watch.html
tests/: test_fluff_generator.py  test_model_funcs.py  test_retrieval.py  test_schemas.py
